Change node color & cursor on pan start - end

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /demo/css/font-awesome.min.css
 /demo/css/jquery.orgchart.css
 /demo/fonts
+/test/*
 
 # Coverage directory used by tools like istanbul
 coverage
